--- a/project-01/index.html
+++ b/project-01/index.html
@@ -8,13 +8,85 @@
     <link rel="stylesheet" href="assets/styles.css">
     <!-- === -->
 
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+Mono:wght@100..900&display=swap" rel="stylesheet">
+    <!-- ============ -->
+
     <title>PROJECT 01</title>
 </head>
 <body>
-    
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <div class="left">
+                <h1>BrandName</h1>
+                <nav>
+                    <ul>
+                        <li>Home</li>
+                        <li>Product</li>
+                        <li>Pricing</li>
+                        <li>Contact</li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="right">
+                <p>Login</p>
+                <button class="solid-btn">JOIN US</button>
+            </div>
+        </div>
+    </header>
 
-    <!-- Javascript -->
-    <script src="main.js"></script>
-    <!-- ========== -->
+    <!-- Main section -->
+    <main>
+        <div class="container">
+            <p>Welcome</p>
+            <h1>Selling on the <br> internet like a pro</h1>
+            <h4>We know how large objects will act, but things on a <br> small scale just do not act that way.</h4>
+            <div class="btns">
+                <button class="solid-btn">Get Quote Now</button>
+                <button class="outlined-btn">Learn more</button>
+            </div>
+        </div>
+    </main>
+
+    <!-- Features section -->
+    <section class="features">
+        <div class="container">
+            <div class="card">
+                <div class="icon red">
+                    <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M14.0003 27.3333C6.63653 27.3333 0.666992 21.3638 0.666992 14C0.666992 6.63616 6.63653 0.666626 14.0003 0.666626C21.3641 0.666626 27.3337 6.63616 27.3337 14C27.3256 21.3604 21.3608 27.3252 14.0003 27.3333ZM14.0003 3.33329C8.10929 3.33329 3.33366 8.10892 3.33366 14C3.33366 19.891 8.10929 24.6666 14.0003 24.6666C19.8914 24.6666 24.667 19.891 24.667 14C24.6604 8.11166 19.8886 3.33991 14.0003 3.33329ZM19.3337 20.6666H8.66699V18H19.3337V20.6666ZM9.33366 14C8.22909 14 7.33366 13.1045 7.33366 12C7.33366 10.8954 8.22909 9.99996 9.33366 9.99996C10.4382 9.99996 11.3337 10.8954 11.3337 12C11.3337 13.1045 10.4382 14 9.33366 14ZM18.6577 13.9813C17.5582 13.9813 16.667 13.09 16.667 11.9906C16.667 10.8912 17.5582 9.99996 18.6577 9.99996C19.7571 9.99996 20.6483 10.8912 20.6483 11.9906C20.6469 13.0894 19.7565 13.9798 18.6577 13.9813Z" fill="#E74040"/>
+                    </svg>    
+                </div>
+                <p class="title">training course</p>
+                <hr>
+                <p class="context">The gradual accumulation of information about atomic and small-scale behaviour...</p>
+            </div>
+            <div class="card">
+                <div class="icon green">
+                    <svg width="32" height="18" viewBox="0 0 32 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0.443359 10.4201L7.98373 17.9605L9.86373 16.0672L2.33001 8.5335L0.443359 10.4201ZM29.6627 0.0415345L15.5304 14.1872L9.88125 8.52471L7.97459 10.4047L15.5304 17.9605L31.5561 1.93487L29.6627 0.0415345ZM24.0115 1.93276L22.1315 0.0394287L13.6371 8.53385L15.5304 10.4138L24.0115 1.93276Z" fill="#2DC071"/>
+                    </svg>    
+                </div>
+                <p class="title">2,769 online courses</p>
+                <hr>
+                <p class="context">The gradual accumulation of information about atomic and small-scale behaviour...</p>
+            </div>
+            <div class="card">
+                <div class="icon white">
+                    <svg width="28" height="22" viewBox="0 0 28 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M24.667 21.6667H3.33366C1.8609 21.6667 0.666992 20.4728 0.666992 19V3.00004C0.666992 1.52728 1.8609 0.333374 3.33366 0.333374H24.667C26.1398 0.333374 27.3337 1.52728 27.3337 3.00004V19C27.3337 20.4728 26.1398 21.6667 24.667 21.6667ZM3.33366 11V19H24.667V11H3.33366ZM3.33366 3.00004V5.66671H24.667V3.00004H3.33366ZM15.3337 16.3334H6.00033V13.6667H15.3337V16.3334Z" fill="#23A6F0"/>
+                    </svg>        
+                </div>
+                <p class="title">training Courses</p>
+                <hr>
+                <p class="context">The gradual accumulation of information about atomic and small-scale behaviour...</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Packages section -->
 </body>
 </html>
