Update logo website

--- a/Project-01 (Course EggHead)/index.html
+++ b/Project-01 (Course EggHead)/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="assets/styles.css">
     <!-- === -->
 
+    <!-- Website logo -->
+    <link rel="shortcut icon" href="assets/logo/logo for letter R.png" type="image/x-icon">
+    <!-- ============ -->
+
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
