Featured products section finished

--- a/Project-01 (Course EggHead)/index.html
+++ b/Project-01 (Course EggHead)/index.html
@@ -590,5 +590,20 @@
             </div>
         </div>
     </section>
+
+    <!-- Featured products section -->
+    <section class="featured-products">
+        <div class="container">
+            <div class="caption">
+                <p>Practice Advice</p>
+                <h2>Featured Products</h2>
+                <h4>Problems trying to resolve the conflict between <br> the two major realms of Classical physics: Newtonian mechanics </h4>
+            </div>
+            <label for="">
+                <input type="email" placeholder="Your Email">
+                <button>Subscribe</button>
+            </label>
+        </div>
+    </section>
 </body>
 </html>
