Footer section finished

--- a/Project-01 (Course EggHead)/index.html
+++ b/Project-01 (Course EggHead)/index.html
@@ -36,7 +36,7 @@
                 </nav>
             </div>
             <div class="right">
-                <p>Login</p>
+                <p style="cursor: pointer">Login</p>
                 <button class="solid-btn">JOIN US</button>
             </div>
         </div>
@@ -605,5 +605,50 @@
             </label>
         </div>
     </section>
+
+    <!-- Footer section -->
+    <footer>
+        <div class="container">
+            <div class="about-me">
+                <h3>Get In Touch</h3>
+                <h4 class="text">Follow my social networks to know more about me</h4>
+                <div class="social-networks-icons">
+                    <!-- Github -->
+                    <a href="https://github.com/BekzhanovR" target="_blank">
+                        <img src="assets/icons/social network icons/github.png" width="28px" height="28px" alt="Github icon">
+                    </a>
+                    <!-- Instagram -->
+                    <a href="https://www.instagram.com/bekzhanovs_life/" target="_blank">
+                        <img src="assets/icons/social network icons/instagram.png" width="28px" height="28px" alt="Github icon">
+                    </a>
+                    <!-- Telegram -->
+                    <a href="https://t.me/Bekzhanov_Rasul" target="_blank">
+                        <img src="assets/icons/social network icons/telegram.png" width="28px" height="28px" alt="Github icon">
+                    </a>
+                </div>
+            </div>
+            <ul>
+                <h2>Company info</h2>
+                <li class="text">About Us</li>
+                <li class="text">Carrier</li>
+                <li class="text">We are hiring</li>
+                <li class="text">Blog</li>
+            </ul>
+            <ul>
+                <h2>Features</h2>
+                <li class="text">Business Marketing</li>
+                <li class="text">User analytic</li>
+                <li class="text">Live chat</li>
+                <li class="text">Unlimited Support</li>
+            </ul>
+            <ul>
+                <h2>Resources</h2>
+                <li class="text">IOS & Android</li>
+                <li class="text">Watch demo</li>
+                <li class="text">Customers</li>
+                <li class="text">Api</li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
