Course EggHead project finished

--- a/Project-01 (Course EggHead)/index.html
+++ b/Project-01 (Course EggHead)/index.html
@@ -650,5 +650,47 @@
             </ul>
         </div>
     </footer>
+
+    <!-- About of developer -->
+    <marquee behavior="" direction="left" width="100%">
+        <div>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+        </div>
+    </marquee>
 </body>
 </html>
