Course EggHead project finished

--- a/Project-01 (Course EggHead)/index.html
+++ b/Project-01 (Course EggHead)/index.html
@@ -690,6 +690,17 @@
             <p>Made by Bekzhanov</p>
             <p>Made by Bekzhanov</p>
             <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
         </div>
     </marquee>
 </body>
