--- a/Project-02 (RIEAD)/index.html
+++ b/Project-02 (RIEAD)/index.html
@@ -3,9 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="assets/styles.css">
+    <!-- === -->
+
+    <!-- Website icon -->
+    <link rel="website icon" href="assets/images/Bekzhanov logo.jpg">
+    <!-- ============ -->
+
     <title>RIEAD | Bekzhanov Rasul</title>
 </head>
 <body>
-    
+    <!-- Header section -->
+    <header>
+        <div class="container">
+            <img src="assets/images/logo.png" alt="website logo" class="logo">
+        </div>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#home"></a>
+                </li>
+                <li>
+                    <a href="#about"></a>
+                </li>
+                <li>
+                    <a href="services"></a>
+                </li>
+                <li>
+                    <a href="skills"></a>
+                </li>
+                <li>
+                    <a href="portfolio"></a>
+                </li>
+                <li>
+                    <a href="contact"></a>
+                </li>
+            </ul>
+        </nav>
+        <button class="btn btn-white">Hire me</button>
+    </header>
 </body>
 </html>
