--- a/Project-02 (RIEAD)/index.html
+++ b/Project-02 (RIEAD)/index.html
@@ -12,6 +12,16 @@
     <link rel="website icon" href="assets/images/Bekzhanov logo.jpg">
     <!-- ============ -->
 
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!-- ============ -->
+
+    <!-- Box icon cdn -->
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <!-- ============ -->
+
     <title>RIEAD | Bekzhanov Rasul</title>
 </head>
 <body>
@@ -19,30 +29,58 @@
     <header>
         <div class="container">
             <img src="assets/images/logo.png" alt="website logo" class="logo">
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#home">Home</a>
+                    </li>
+                    <li>
+                        <a href="#about">About me</a>
+                    </li>
+                    <li>
+                        <a href="#services">Services</a>
+                    </li>
+                    <li>
+                        <a href="#skills">Skills</a>
+                    </li>
+                    <li>
+                        <a href="#portfolio">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+            <button class="btn btn-white">Hire me</button>
         </div>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#home"></a>
-                </li>
-                <li>
-                    <a href="#about"></a>
-                </li>
-                <li>
-                    <a href="services"></a>
-                </li>
-                <li>
-                    <a href="skills"></a>
-                </li>
-                <li>
-                    <a href="portfolio"></a>
-                </li>
-                <li>
-                    <a href="contact"></a>
-                </li>
-            </ul>
-        </nav>
-        <button class="btn btn-white">Hire me</button>
     </header>
+
+    <!-- Home section -->
+    <section class="home">
+        <div class="container">
+            <div class="content">
+                <h3>Hi, It's me</h3>
+                <h1>MD RIEAD MIA</h1>
+                <h2>And I'm a <span>Frontend developer</span></h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos dolorum ullam molestias autem deleniti iure earum!</p>
+                <div class="social-links">
+                    <a href="">
+                        <box-icon color="#fff" name='telegram' type='logo'></box-icon>
+                    </a>
+                    <a href="">
+                        <box-icon color="#fff" type='logo' name='linkedin'></box-icon>
+                    </a>
+                    <a href="">
+                        <box-icon color="#fff" name='instagram' type='logo' ></box-icon>
+                    </a>
+                    <a href="">
+                        <box-icon color="#fff" name='github' type='logo' ></box-icon>
+                    </a>
+                </div>
+                <button class="btn-orange">Download CV</button>
+            </div>
+            <img src="assets/images/Banner Image.png" alt="Home page image">
+        </div>
+    </section>
 </body>
 </html>
