About section finished

--- a/Project-02 (RIEAD)/assets/index.html
+++ b/Project-02 (RIEAD)/assets/index.html
@@ -54,10 +54,9 @@
             <button class="btn btn-white">Hire me</button>
         </div>
     </header>
-    <!-- Header section end -->
 
-    <!-- Home section start-->
-    <section class="home" id="home">
+    <!-- Home section -->
+    <section class="home" id="#home">
         <div class="container">
             <div class="content">
                 <h3>Hi, It's me</h3>
@@ -83,27 +82,12 @@
             <img src="assets/images/Banner Image.png" alt="Home page image">
         </div>
     </section>
-    <!-- Home section end -->
 
-    <!-- About me section start -->
+    <!-- About me section -->
     <section class="about-me" id="about">
         <div class="container">
-            <h1 class="title">
-                About  <span>me</span>
-            </h1>
-            <div class="content">
-                <img src="assets/images/about img.png" alt="about image">
-                <div class="about-content">
-                    <h2>Frontend developer & Graphic designer</h2>
-                    <div class="paragraphs">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At reiciendis, quas voluptatum facere quam iusto itaque sapiente dolor provident aspernatur unde, suscipit illum, velit similique animi iste corporis repellendus veritatis minus voluptas. Sunt, eligendi. Praesentium explicabo facere quo ad earum.</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At reiciendis, quas voluptatum facere quam iusto itaque sapiente dolor provident.</p>
-                    </div>
-                    <button class="btn-white" style="width: 180px">Read More</button>
-                </div>
-            </div>
+            <img src="" alt="">
         </div>
     </section>
-    <!-- About section end -->
 </body>
 </html>
