Services & Skills section finished

--- a/Project-02 (RIEAD)/index.html
+++ b/Project-02 (RIEAD)/index.html
@@ -105,5 +105,81 @@
         </div>
     </section>
     <!-- About section end -->
+
+    <!-- Services section start -->
+    <section class="services" id="services">
+        <div class="container">
+            <h1 class="title">My <span>Services</span></h1>
+            <div class="cards">
+                <div class="card">
+                    <img src="assets/icons/laptop-code.png" alt="">
+                    <h3>Web development</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
+                </div>
+                <div class="card">
+                    <img src="assets/icons/mobile-alt.png" alt="">
+                    <h3>Apps development</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
+                </div>
+                <div class="card">
+                    <img src="assets/icons/chart-bar.png" alt="">
+                    <h3>Digital marketing</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Services section end -->
+
+    <!-- Skills section start -->
+    <section class="skills" id="skills">
+        <div class="container">
+            <h1 class="title">My <span>Skills</span></h1>
+            <div class="skills-container">
+                <div class="skill-container">
+                    <h4 class="skill-name">HTML 5</h4>
+                    <div class="progress-bar">
+                        <div class="progress" style="width:  80%;"></div>
+                    </div>
+                    <div class="procent">80%</div>
+                </div>
+                <div class="skill-container">
+                    <h4 class="skill-name">CSS 3</h4>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 75%;"></div>
+                    </div>
+                    <div class="procent">75%</div>
+                </div>
+                <div class="skill-container">
+                    <h4 class="skill-name">Bootstrap</h4>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 60%;"></div>
+                    </div>
+                    <div class="procent">60%</div>
+                </div>
+                <div class="skill-container">
+                    <h4 class="skill-name">Javascipt</h4>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 50%;"></div>
+                    </div>
+                    <div class="procent">50%</div>
+                </div>
+                <div class="skill-container">
+                    <h4 class="skill-name">Adobe Photoshop</h4>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 75%;"></div>
+                    </div>
+                    <div class="procent">75%</div>
+                </div>
+                <div class="skill-container">
+                    <h4 class="skill-name">Adobe Illustrator</h4>
+                    <div class="progress-bar">
+                        <div class="progress" style="width: 60%;"></div>
+                    </div>
+                    <div class="procent">60%</div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
