Portfolio section finished

--- a/Project-02 (RIEAD)/index.html
+++ b/Project-02 (RIEAD)/index.html
@@ -181,5 +181,72 @@
             </div>
         </div>
     </section>
+    <!-- Skills section end -->
+
+    <!-- Portfolio section start -->
+    <section class="portfolio">
+        <div class="container">
+            <h1 class="title">Portfolio</h1>
+            <div class="portfolio-cards">
+                <div class="card">
+                    <img src="assets/images/Portfolio 1.png" alt="">
+                    <div class="hover">
+                        <img src="assets/icons/Vector.png" alt="">
+                        <h3>Web design</h3>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/images/Portfolio 2.png" alt="">
+                    <div class="hover">
+                        <img src="assets/icons/Vector.png" alt="">
+                        <h3>Web design</h3>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/images/Portfolio 3.png" alt="">
+                    <div class="hover">
+                        <img src="assets/icons/Vector.png" alt="">
+                        <h3>Web design</h3>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/images/Portfolio 4.png" alt="">
+                    <div class="hover">
+                        <img src="assets/icons/Vector.png" alt="">
+                        <h3>Web design</h3>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/images/Portfolio 5.png" alt="">
+                    <div class="hover">
+                        <img src="assets/icons/Vector.png" alt="">
+                        <h3>Web design</h3>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/images/Portfolio 6.png" alt="">
+                    <div class="hover">
+                        <img src="assets/icons/Vector.png" alt="">
+                        <h3>Web design</h3>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/images/Portfolio 7.png" alt="">
+                    <div class="hover">
+                        <img src="assets/icons/Vector.png" alt="">
+                        <h3>Web design</h3>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/images/Portfolio 8.png" alt="">
+                    <div class="hover">
+                        <img src="assets/icons/Vector.png" alt="">
+                        <h3>Web design</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Portfolio section end -->
 </body>
 </html>
