Contact section finished

--- a/Project-02 (RIEAD)/index.html
+++ b/Project-02 (RIEAD)/index.html
@@ -184,7 +184,7 @@
     <!-- Skills section end -->
 
     <!-- Portfolio section start -->
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio">
         <div class="container">
             <h1 class="title">Portfolio</h1>
             <div class="portfolio-cards">
@@ -248,5 +248,46 @@
         </div>
     </section>
     <!-- Portfolio section end -->
+
+    <!-- Contact section start -->
+    <section class="contact" id="contact">
+        <div class="container">
+            <h1 class="title">Contact</h1>
+            <div class="box">
+                <div class="info">
+                    <div class="item">
+                        <box-icon color="#fff" type='solid' name='phone'></box-icon>
+                        <div>
+                            <p>+998907052412</p>
+                            <p>+998907092412</p>
+                        </div>
+                    </div>    
+                    <div class="item">
+                        <box-icon color="#fff" name='envelope' type='solid' ></box-icon>
+                        <div>
+                            <p>bekzhanovofficial@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <box-icon color="#fff" name='navigation' type='solid' ></box-icon>
+                        <div>
+                            <p>Karakalpakstan, Nukus</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="form">
+                    <input class="contact-detial" type="text" name="Full name" placeholder="Full name">
+                    <input class="contact-detial" type="email" name="Email address" placeholder="Email address">
+                    <div>
+                        <input class="contact-detial" type="tel" name="Phone number" placeholder="Phone number">
+                        <input class="contact-detial" type="text" name="Subject" placeholder="Subject">
+                    </div>
+                    <textarea class="contact-detial" name="Your message" placeholder="Your message" id="" cols="30" rows="10"></textarea>
+                    <button class="send">Send</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Contact section finished -->
 </body>
 </html>
