--- a/Project-02 (RIEAD)/index.html
+++ b/Project-02 (RIEAD)/index.html
@@ -289,5 +289,58 @@
         </div>
     </section>
     <!-- Contact section finished -->
+
+    <!-- About of developer -->
+    <marquee behavior="" direction="left" width="100%">
+        <div>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+            <p>Made by Bekzhanov</p>
+        </div>
+    </marquee>
 </body>
 </html>
