Header & Main section finished

--- a/Project-03 (DoctorCare)/index.html
+++ b/Project-03 (DoctorCare)/index.html
@@ -16,11 +16,81 @@
     <!-- ======= -->
     <!-- ===== -->
 
+    <!-- Box icons cdn -->
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+    <!-- ============= -->
+
     <title>DoctorCare | Bekzhanov Rasul</title>
 </head>
 <body>
-    
-    
+    <!-- Header section start -->
+    <header>
+        <div class="container">
+            <img src="assets/img/primary-logo.svg" class="logo" alt="">
+            <nav>
+                <ul>
+                    <li class="active">
+                        <a href="">Início</a>
+                    </li>
+                    <li>
+                        <a href="">Sobre</a>
+                    </li>
+                    <li>
+                        <a href="">Serviços</a>
+                    </li>
+                    <li>
+                        <a href="">Depoimentos</a>
+                    </li>
+                </ul>
+            </nav>
+            <button class="secondary-button">Agendar consulta</button>
+        </div>
+    </header>
+    <!-- Header section end -->
+
+    <!-- Main section start -->
+    <main>
+        <div class="container">
+            <div class="right">
+                <p class="paragraph">BOAS-VINDAS A DOCTORCARE 👋</p>
+                <h1 class="title">Assistência médica simplificada para todos</h1>
+                <p class="caption">Os médicos da DoctorCare vão além dos sintomas para tratar a causa raiz de sua doença e proporcionar uma cura a longo prazo.</p>
+                <div>
+                    <button class="primary-button">
+                        <box-icon color="#fff" type='logo' name='whatsapp'></box-icon>
+                        Agende sua consulta
+                    </button>
+                </div>
+            </div>
+            <div class="left">
+                <img src="assets/img/hero-img.png" alt="">
+            </div>
+        </div>
+    </main>
+    <!-- Main section end -->
+
+    <!-- Stats section start -->
+    <section class="our-stats">
+        <div class="container">
+            <div class="stats">
+                <div class="box">
+                    <h2>+3.500</h2>
+                    <p>Pacientes atendidos</p>
+                </div>
+                <hr>
+                <div class="box">
+                    <h2>+15</h2>
+                    <p>Especialistas disponíveis</p>
+                </div>
+                <hr>
+                <div class="box">
+                    <h2>+10</h2>
+                    <p>Anos no mercados</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Javascript -->
     <script src="assets/app.js"></script>
 </body>
