Stats section finished

--- a/Project-03 (DoctorCare)/index.html
+++ b/Project-03 (DoctorCare)/index.html
@@ -90,6 +90,7 @@
             </div>
         </div>
     </section>
+    <!-- Stats section end -->
 
     <!-- Javascript -->
     <script src="assets/app.js"></script>
