Services section finished

--- a/Project-03 (DoctorCare)/index.html
+++ b/Project-03 (DoctorCare)/index.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="left">
-                <img src="assets/img/hero-img.png" alt="">
+                <img style="transform: translateY(60px);" src="assets/img/hero-img.png" alt="">
             </div>
         </div>
     </main>
@@ -92,6 +92,49 @@
     </section>
     <!-- Stats section end -->
 
+    <!-- Services section start -->
+    <section class="services">
+        <div class="container">
+            <div class="titles">
+                <p class="paragraph">SERVIÇOS</p>
+                <h1 class="title">Como podemos ajudá-lo a se sentir melhor?</h1>
+            </div>
+            <div class="cards">
+                <div class="card">
+                    <img src="assets/icons/Circle-check.svg" alt="Check icon">
+                    <h2 class="title">Problemas digestivos</h2>
+                    <p class="caption">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
+                </div>
+                <div class="card">
+                    <img src="assets/icons/Circle-check.svg" alt="Check icon">
+                    <h2 class="title">Problemas digestivos</h2>
+                    <p class="caption">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
+                </div>
+                <div class="card">
+                    <img src="assets/icons/Circle-check.svg" alt="Check icon">
+                    <h2 class="title">Problemas digestivos</h2>
+                    <p class="caption">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
+                </div>
+                <div class="card">
+                    <img src="assets/icons/Circle-check.svg" alt="Check icon">
+                    <h2 class="title">Problemas digestivos</h2>
+                    <p class="caption">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
+                </div>
+                <div class="card">
+                    <img src="assets/icons/Circle-check.svg" alt="Check icon">
+                    <h2 class="title">Problemas digestivos</h2>
+                    <p class="caption">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
+                </div>
+                <div class="card">
+                    <img src="assets/icons/Circle-check.svg" alt="Check icon">
+                    <h2 class="title">Problemas digestivos</h2>
+                    <p class="caption">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Services section end -->
+    
     <!-- Javascript -->
     <script src="assets/app.js"></script>
 </body>
