--- a/Project-03 (DoctorCare)/index.html
+++ b/Project-03 (DoctorCare)/index.html
@@ -26,7 +26,7 @@
     <!-- Header section start -->
     <header>
         <div class="container">
-            <img src="assets/img/primary-logo.svg" class="logo" alt="">
+            <img src="assets/img/primary-logo.svg" id="logo" alt="">
             <nav>
                 <ul>
                     <li class="active">
