--- a/Project-03 (DoctorCare)/index.html
+++ b/Project-03 (DoctorCare)/index.html
@@ -26,17 +26,17 @@
     <!-- Header section start -->
     <header>
         <div class="container">
-            <img src="assets/img/primary-logo.svg" id="logo" alt="">
+            <img src="assets/img/primary-logo.svg" id="logo" alt="website logo">
             <nav>
                 <ul>
                     <li class="active">
                         <a href="">Início</a>
                     </li>
                     <li>
-                        <a href="">Sobre</a>
+                        <a href="">Serviços</a>
                     </li>
                     <li>
-                        <a href="">Serviços</a>
+                        <a href="">Sobre</a>
                     </li>
                     <li>
                         <a href="">Depoimentos</a>
