Update contexts and services section styles

--- a/Project-03 (DoctorCare)/index.html
+++ b/Project-03 (DoctorCare)/index.html
@@ -49,7 +49,7 @@
     <!-- Header section end -->
 
     <!-- Main section start -->
-    <main>
+    <main class="main">
         <div class="container">
             <div class="right">
                 <p class="paragraph">BOAS-VINDAS A DOCTORCARE 👋</p>
@@ -107,27 +107,27 @@
                 </div>
                 <div class="card">
                     <img src="assets/icons/Circle-check.svg" alt="Check icon">
-                    <h2 class="title">Problemas digestivos</h2>
+                    <h2 class="title">Saúde Hormonal</h2>
                     <p class="caption">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
                 </div>
                 <div class="card">
                     <img src="assets/icons/Circle-check.svg" alt="Check icon">
-                    <h2 class="title">Problemas digestivos</h2>
+                    <h2 class="title">Bem-estar mental</h2>
                     <p class="caption">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
                 </div>
                 <div class="card">
                     <img src="assets/icons/Circle-check.svg" alt="Check icon">
-                    <h2 class="title">Problemas digestivos</h2>
+                    <h2 class="title">Cuidados Pediátricos</h2>
                     <p class="caption">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
                 </div>
                 <div class="card">
                     <img src="assets/icons/Circle-check.svg" alt="Check icon">
-                    <h2 class="title">Problemas digestivos</h2>
+                    <h2 class="title">Autoimune e Inflamação</h2>
                     <p class="caption">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
                 </div>
                 <div class="card">
                     <img src="assets/icons/Circle-check.svg" alt="Check icon">
-                    <h2 class="title">Problemas digestivos</h2>
+                    <h2 class="title">Saúde do Coração</h2>
                     <p class="caption">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
                 </div>
             </div>
