Header section context updated

--- a/Project-03 (DoctorCare)/index.html
+++ b/Project-03 (DoctorCare)/index.html
@@ -39,7 +39,7 @@
                         <a href="">Sobre</a>
                     </li>
                     <li>
-                        <a href="">Depoimentos</a>
+                        <a href="">Contato</a>
                     </li>
                 </ul>
             </nav>
