About section finished

--- a/Project-03 (DoctorCare)/index.html
+++ b/Project-03 (DoctorCare)/index.html
@@ -134,6 +134,21 @@
         </div>
     </section>
     <!-- Services section end -->
+
+    <!-- About section start -->
+    <section class="about">
+        <div class="container">
+            <div class="left">
+                <img src="assets/img/about-img.png" alt="">
+            </div>
+            <div class="right">
+                <p class="paragraph">SOBRE NÓS</p>
+                <h1 class="title">Entenda quem somos e por que existimos</h1>
+                <p class="caption">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
+            </div>
+        </div>
+    </section>
+    <!-- About section end -->
     
     <!-- Javascript -->
     <script src="assets/app.js"></script>
