Header section updated

--- a/Project-03 (DoctorCare)/index.html
+++ b/Project-03 (DoctorCare)/index.html
@@ -30,16 +30,16 @@
             <nav>
                 <ul>
                     <li class="active">
-                        <a href="">Início</a>
+                        <a href="#home">Início</a>
                     </li>
                     <li>
-                        <a href="">Serviços</a>
+                        <a href="#services">Serviços</a>
                     </li>
                     <li>
-                        <a href="">Sobre</a>
+                        <a href="#about">Sobre</a>
                     </li>
                     <li>
-                        <a href="">Contato</a>
+                        <a href="#contact">Contato</a>
                     </li>
                 </ul>
             </nav>
@@ -49,7 +49,7 @@
     <!-- Header section end -->
 
     <!-- Main section start -->
-    <main class="main">
+    <main class="main" id="home">
         <div class="container">
             <div class="right">
                 <p class="paragraph">BOAS-VINDAS A DOCTORCARE 👋</p>
@@ -93,7 +93,7 @@
     <!-- Stats section end -->
 
     <!-- Services section start -->
-    <section class="services">
+    <section class="services" id="services">
         <div class="container">
             <div class="titles">
                 <p class="paragraph">SERVIÇOS</p>
@@ -136,7 +136,7 @@
     <!-- Services section end -->
 
     <!-- About section start -->
-    <section class="about">
+    <section class="about" id="about">
         <div class="container">
             <div class="left">
                 <img src="assets/img/about-img.png" alt="">
