Icons style updated

--- a/Project-03 (DoctorCare)/index.html
+++ b/Project-03 (DoctorCare)/index.html
@@ -101,32 +101,32 @@
             </div>
             <div class="cards">
                 <div class="card">
-                    <img src="assets/icons/Circle-check.svg" alt="Check icon">
+                    <img class="icon" src="assets/icons/Circle-check.svg" alt="Check icon">
                     <h2 class="title">Problemas digestivos</h2>
                     <p class="caption">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
                 </div>
                 <div class="card">
-                    <img src="assets/icons/Circle-check.svg" alt="Check icon">
+                    <img class="icon" src="assets/icons/Circle-check.svg" alt="Check icon">
                     <h2 class="title">Saúde Hormonal</h2>
                     <p class="caption">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
                 </div>
                 <div class="card">
-                    <img src="assets/icons/Circle-check.svg" alt="Check icon">
+                    <img class="icon" src="assets/icons/Circle-check.svg" alt="Check icon">
                     <h2 class="title">Bem-estar mental</h2>
                     <p class="caption">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
                 </div>
                 <div class="card">
-                    <img src="assets/icons/Circle-check.svg" alt="Check icon">
+                    <img class="icon" src="assets/icons/Circle-check.svg" alt="Check icon">
                     <h2 class="title">Cuidados Pediátricos</h2>
                     <p class="caption">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
                 </div>
                 <div class="card">
-                    <img src="assets/icons/Circle-check.svg" alt="Check icon">
+                    <img class="icon" src="assets/icons/Circle-check.svg" alt="Check icon">
                     <h2 class="title">Autoimune e Inflamação</h2>
                     <p class="caption">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
                 </div>
                 <div class="card">
-                    <img src="assets/icons/Circle-check.svg" alt="Check icon">
+                    <img class="icon" src="assets/icons/Circle-check.svg" alt="Check icon">
                     <h2 class="title">Saúde do Coração</h2>
                     <p class="caption">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim.</p>
                 </div>
@@ -150,6 +150,29 @@
     </section>
     <!-- About section end -->
     
+    <!-- Contact section start -->
+    <section class="contact" id="contact">
+        <div class="container">
+            <div class="left">
+                <h2 class="title">Entre em contato com a gente!</h2>
+                <div class="social-pages">
+                    <img class="icon" src="assets/icons/map-pin.svg" alt="">
+                    <img class="icon" src="assets/icons/mail.svg" alt="">
+                </div>
+                <div>
+                    <button class="primary-button">
+                        <box-icon color="#fff" type='logo' name='whatsapp'></box-icon>
+                        Agende sua consulta
+                    </button>
+                </div>
+            </div>
+            <div class="right">
+                <img src="assets/img/contact-img.png" alt="">
+            </div>
+        </div>
+    </section>
+    <!-- Contact section end -->
+
     <!-- Javascript -->
     <script src="assets/app.js"></script>
 </body>
