--- a/Project-03 (DoctorCare)/index.html
+++ b/Project-03 (DoctorCare)/index.html
@@ -156,8 +156,14 @@
             <div class="left">
                 <h2 class="title">Entre em contato com a gente!</h2>
                 <div class="social-pages">
-                    <img class="icon" src="assets/icons/map-pin.svg" alt="">
-                    <img class="icon" src="assets/icons/mail.svg" alt="">
+                    <div>
+                        <img class="icon" src="assets/icons/map-pin.svg" alt="">
+                        <p class="caption">R. Amauri Souza, 346</p>
+                    </div>
+                    <div>
+                        <img class="icon" src="assets/icons/mail.svg" alt="">
+                        <p class="caption">contato@doctorcare.com</p>
+                    </div>
                 </div>
                 <div>
                     <button class="primary-button">
