Footer section end

--- a/Project-03 (DoctorCare)/index.html
+++ b/Project-03 (DoctorCare)/index.html
@@ -179,6 +179,23 @@
     </section>
     <!-- Contact section end -->
 
+    <!-- Footer section -->
+    <footer>
+        <div class="container">
+            <div class="left">
+                <img src="assets/img/secondary-logo.svg" alt="">
+                <p>©2022 - DoctorCare.</p>
+                <p>Todos os direitos reservados.</p>
+            </div>
+            <div class="right">
+                <img class="icon" src="assets/icons/instagram.svg" alt="">
+                <img class="icon" src="assets/icons/facebook.svg" alt="">
+                <img class="icon" src="assets/icons/youtube.svg" alt="">
+            </div>
+        </div>
+    </footer>
+    <!-- Footer section styles end -->
+
     <!-- Javascript -->
     <script src="assets/app.js"></script>
 </body>
