Footer section finished

--- a/Project-03 (DoctorCare)/index.html
+++ b/Project-03 (DoctorCare)/index.html
@@ -179,7 +179,7 @@
     </section>
     <!-- Contact section end -->
 
-    <!-- Footer section -->
+    <!-- Footer section start -->
     <footer>
         <div class="container">
             <div class="left">
