--- a/Project-03 (DoctorCare)/index.html
+++ b/Project-03 (DoctorCare)/index.html
@@ -49,7 +49,7 @@
     <!-- Header section end -->
 
     <!-- Main section start -->
-    <main class="main" id="home">
+    <main class="main section" id="home">
         <div class="container">
             <div class="right">
                 <p class="paragraph">BOAS-VINDAS A DOCTORCARE 👋</p>
@@ -93,7 +93,7 @@
     <!-- Stats section end -->
 
     <!-- Services section start -->
-    <section class="services" id="services">
+    <section class="services section" id="services">
         <div class="container">
             <div class="titles">
                 <p class="paragraph">SERVIÇOS</p>
@@ -136,7 +136,7 @@
     <!-- Services section end -->
 
     <!-- About section start -->
-    <section class="about" id="about">
+    <section class="about section" id="about">
         <div class="container">
             <div class="left">
                 <img src="assets/img/about-img.png" alt="">
@@ -151,7 +151,7 @@
     <!-- About section end -->
     
     <!-- Contact section start -->
-    <section class="contact" id="contact">
+    <section class="contact section" id="contact">
         <div class="container">
             <div class="left">
                 <h2 class="title">Entre em contato com a gente!</h2>
